--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -6,9 +6,9 @@ runnable=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.txt"
 exclude_filter=""
-export_path="../Exports/Web/index.html"
+export_path="../../Exports/Web/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -44,9 +44,9 @@ runnable=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.txt"
 exclude_filter=""
-export_path="../Exports/Windows/metroidvania22.exe"
+export_path="../../Exports/Windows/metroidvania22_metsys_sav.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
