--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -44,7 +44,7 @@ runnable=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter="*.txt, *.dialogue"
+include_filter="*.txt"
 exclude_filter=""
 export_path="../../Exports/Windows/metroidvania22_12_3.exe"
 encryption_include_filters=""
